--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "nodemon": "^3.1.3",
+    "mongoose": "^8.5.0",
+    "mongoose-paginate-v2": "^1.8.2",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
