--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "preentrega1",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/main.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "express-handlebars": "^7.1.3",
-    "mongoose": "^8.5.0",
-    "mongoose-paginate-v2": "^1.8.2",
-    "socket.io": "^4.7.5"
-  },
+  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
+    "express-handlebars": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   }
 }
